fix: fix API and frontend contract
